FIXED TABLET FORMAT> TABLET AND DESKTOP COMPLETE

--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  </head>
-  <body>
-    
-  </body>
   
   <title>Great Idea - Responsive I</title>
 
@@ -25,16 +20,16 @@
   <header id="navbar">
     
   <nav id="navitems">
-    <a href="services.html"> Services </a>
-    <a href="services.html"> Product </a>
-    <a href="services.html"> Vision </a>
-    <a href="services.html"> Features </a>
-    <a href="services.html"> About </a>
-    <a href="services.html">Contact</a>
-  </nav>
-<div class="navlogo">
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-</div>
+    <a id="a" href="services.html"> Services </a>
+    <a id="b" href="services.html"> Product </a>
+    <a id="c" href="services.html"> Vision </a>
+    <a id="d" href="services.html"> Features </a>
+    <a id="e" href="services.html"> About </a>
+    <a id="f" href="services.html">Contact</a>
+  
+<a id="g" href="index.html"><img class="navlogo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+</nav>
+
 </header>
 
 
